--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-
+        <script data-main="index" src="require.js"></script>
     </head>
     <body>
-        
+
     </body>
 </html>
