--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,18 @@
 <html>
-    <head>
-        <script data-main="index" src="require.js"></script>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+    </style>
+    <script data-main="index" src="require.js"></script>
+</head>
+
+<body>
+
+</body>
+
 </html>
