--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,24 @@
             padding: 0;
             box-sizing: border-box;
         }
+        .app {
+            display: flex;
+            padding: 20px;
+            align-items: start;
+            justify-content: center;
+        }
+        .canvas {
+            margin-right: 20px;
+        }
     </style>
     <script data-main="index" src="require.js"></script>
 </head>
 
 <body>
+    <div class="app">
+        <div class="controls">
 
+        </div>
+    </div>
 </body>
-
 </html>
