Have glider gun prototype

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,21 @@
             padding: 0;
             box-sizing: border-box;
         }
+        
         .app {
             display: flex;
             padding: 20px;
             align-items: start;
             justify-content: center;
         }
+        
         .canvas {
             margin-right: 20px;
+        }
+
+        .controls {
+            display: flex;
+            flex-direction: column;
         }
     </style>
     <script data-main="index" src="require.js"></script>
@@ -22,9 +29,6 @@
 
 <body>
     <div class="app">
-        <div class="controls">
-
-        </div>
     </div>
 </body>
 </html>
